--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img class="logo" src="img/icon.webp">
                 <ul class="title">
                     <li>Themis Web Interface</li>
-                    <li>Fix this i'm tired</li>
+                    <li>Made from scratch, Crafted with <t style="color: red;">❤</t> by Belikhun</li>
                 </ul>
             </span>
 
