update image url

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
 
             <span class="info">
-                <img class="logo" src="/img/icon.webp">
+                <img class="logo" src="img/icon.webp">
                 <ul class="title">
                     <li>Themis Web Interface</li>
                     <li>Made from scratch, Crafted with <t style="color: red;">❤</t> by Belikhun</li>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="header">
                 <div class="inner">
-                    <img class="big-image" src="/img/main.png">
+                    <img class="big-image" src="img/main.png">
                     <span class="text">
                         <t class="title">Themis Web Interface</t>
                         <t class="description">A Fast, Simple and Secure way to manage your students in your computer science classroom</t>
